content/_generated-doc/2.7/config/quarkus-config-group-dev-testing-test-config-profile.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-dev-testing-test-config-profile_configuration]]link:#quarkus-config-group-dev-testing-test-config-profile_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-config-group-dev-testing-test-config-profile_quarkus.test.profile]]`link:#quarkus-config-group-dev-testing-test-config-profile_quarkus.test.profile[quarkus.test.profile]`

[.description]
--
The profile (dev, test or prod) to use when testing using @QuarkusTest
--|string 
|`test`


a|icon:lock[title=Fixed at build time] [[quarkus-config-group-dev-testing-test-config-profile_quarkus.test.profile.tags]]`link:#quarkus-config-group-dev-testing-test-config-profile_quarkus.test.profile.tags[quarkus.test.profile.tags]`

[.description]
--
The tags this profile is associated with. When the `quarkus.test.profile.tags` System property is set (its value is a comma separated list of strings) then Quarkus will only execute tests that are annotated with a `@TestProfile` that has at least one of the supplied (via the aforementioned system property) tags.
--|list of string 
|

|===